--- a/client/src/app/students-list/students-list.component.html
+++ b/client/src/app/students-list/students-list.component.html
@@ -4,9 +4,9 @@
       <h3>Фильтр</h3>
       <hr>
       <div class="options-list">
-        <input type="checkbox" id="date-option" class="option-input checkbox form-control" (change)="optionsList.date = !optionsList.date"><label for="date-option">Фильтровать по дате</label><br>
-        <input type="checkbox" id="course-option" class="option-input checkbox form-control" (change)="optionsList.course = !optionsList.course"><label for="course-option">Фильтровать по курсу</label><br>
-        <input type="checkbox" id="status-option" class="option-input checkbox form-control" (change)="optionsList.status = !optionsList.status"><label for="status-option">Фильтровать по статусу</label><br>
+        <input type="checkbox" id="date-option" class="option-input checkbox form-control" (change)="optionsList.date = !optionsList.date;"><label for="date-option">Фильтровать по дате</label><br>
+        <input type="checkbox" id="course-option" class="option-input checkbox form-control" (change)="optionsList.course = !optionsList.course;"><label for="course-option">Фильтровать по курсу</label><br>
+        <input type="checkbox" id="status-option" class="option-input checkbox form-control" (change)="optionsList.status = !optionsList.status;"><label for="status-option">Фильтровать по статусу</label><br>
       </div>
       <hr>
       <div *ngIf="optionsList.date" class="date-option">
@@ -18,20 +18,14 @@
         <div *ngIf="datePeriod === 'Год'" style="margin-top: 10px">
           <label>Выберите год</label>
           <select class="form-control" [(ngModel)]="dateOptionYear">
-            <option>2015</option>
-            <option>2016</option>
-            <option>2017</option>
+            <option *ngFor="let year of yearsAvailable">{{year}}</option>
           </select>
         </div>
         <div *ngIf="datePeriod === 'Квартал'" style="margin-top: 10px">
           <label>Выберите год</label>
-          <select class="form-control" [(ngModel)]="dateOptionYear">
-            <option>2015</option>
-            <option>2016</option>
-            <option>2017</option>
-          </select>
+          <select class="form-control" [(ngModel)]="dateOptionYear"><option *ngFor="let year of yearsAvailable">{{year}}</option></select>
           <label>Выберите квартал</label>
-          <select class="form-control" [(ngModel)]="dateOptionQuarter">
+          <select class="form-control" [(ngModel)]="dateOptionQuarter" (change)="onChangeQuarter()">
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -40,13 +34,9 @@
         </div>
         <div *ngIf="datePeriod === 'Месяц'" style="margin-top: 10px">
           <label>Выберите год</label>
-          <select class="form-control" [(ngModel)]="dateOptionYear">
-            <option>2015</option>
-            <option>2016</option>
-            <option>2017</option>
-          </select>
+          <select class="form-control" [(ngModel)]="dateOptionYear"><option *ngFor="let year of yearsAvailable">{{year}}</option></select>
           <label>Выберите квартал</label>
-          <select class="form-control" [(ngModel)]="dateOptionQuarter">
+          <select class="form-control" [(ngModel)]="dateOptionQuarter" (change)="onChangeQuarter()">
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -54,14 +44,7 @@
           </select>
           <label>Выберите месяц</label>
           <select class="form-control" [(ngModel)]="dateOptionMonth">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-            <option>6</option>
-            <option>7</option>
-            <option>8</option>
+            <option *ngFor="let month of monthesAvailable[dateOptionQuarter]">{{month}}</option>
           </select>
         </div>
         <div *ngIf="datePeriod === 'День'" style="margin-top: 10px">
@@ -72,22 +55,22 @@
       </div>
       <div *ngIf="optionsList.course" class="course-option">
         <h3 style="text-align: center;">Курс</h3>
-        <input type="checkbox" class="option-input checkbox form-control" (change)="courseOption.first = !courseOption.first"><label>1</label><br>
-        <input type="checkbox" class="option-input checkbox form-control" (change)="courseOption.second = !courseOption.second"><label>2</label><br>
-        <input type="checkbox" class="option-input checkbox form-control" (change)="courseOption.third = !courseOption.third"><label>3</label><br>
-        <input type="checkbox" class="option-input checkbox form-control" (change)="courseOption.fourth = !courseOption.fourth"><label>4</label><br>
-        <input type="checkbox" class="option-input checkbox form-control" (change)="courseOption.fifth = !courseOption.fifth"><label>5</label><br>
+        <input type="checkbox" class="option-input checkbox form-control" [checked]="courseOption.first" (change)="courseOption.first = !courseOption.first"><label>1</label><br>
+        <input type="checkbox" class="option-input checkbox form-control" [checked]="courseOption.second" (change)="courseOption.second = !courseOption.second"><label>2</label><br>
+        <input type="checkbox" class="option-input checkbox form-control" [checked]="courseOption.third" (change)="courseOption.third = !courseOption.third"><label>3</label><br>
+        <input type="checkbox" class="option-input checkbox form-control" [checked]="courseOption.fourth" (change)="courseOption.fourth = !courseOption.fourth"><label>4</label><br>
+        <input type="checkbox" class="option-input checkbox form-control" [checked]="courseOption.fifth" (change)="courseOption.fifth = !courseOption.fifth"><label>5</label><br>
         <hr>
       </div>
       <div *ngIf="optionsList.status" class="status-option">
         <h3 style="text-align: center;">Статус</h3>
-        <input type="checkbox" class="option-input checkbox form-control" (change)="statusOption.admis = !statusOption.admis"><label>Зачислен</label><br>
-        <input type="checkbox" class="option-input checkbox form-control" (change)="statusOption.depart = !statusOption.depart"><label>Отчислен</label><br>
-        <input type="checkbox" class="option-input checkbox form-control" (change)="statusOption.trans = !statusOption.trans"><label>Переведён</label><br>
-        <input type="checkbox" class="option-input checkbox form-control" (change)="statusOption.grad = !statusOption.grad"><label>Выпустился</label><br>
+        <input type="checkbox" class="option-input checkbox form-control" [checked]="statusOption.admis" (change)="statusOption.admis = !statusOption.admis"><label>Зачислен</label><br>
+        <input type="checkbox" class="option-input checkbox form-control" [checked]="statusOption.depart" (change)="statusOption.depart = !statusOption.depart"><label>Отчислен</label><br>
+        <input type="checkbox" class="option-input checkbox form-control" [checked]="statusOption.trans" (change)="statusOption.trans = !statusOption.trans"><label>Переведён</label><br>
+        <input type="checkbox" class="option-input checkbox form-control" [checked]="statusOption.grad" (change)="statusOption.grad = !statusOption.grad"><label>Выпустился</label><br>
         <hr>
       </div>
-      <button *ngIf="optionsList.course || optionsList.date || optionsList.status" class="btn-primary btn" style="margin-bottom: 10px" (click)="applyOptions()">Применить</button>
+      <button class="btn-primary btn" style="margin-bottom: 10px" (click)="applyOptions()">Применить</button>
     </div>
     <div class="col-xs-10 students-list">
       <div class="row options-top">
@@ -97,7 +80,7 @@
           <h4 style="text-align: center">Столбцы</h4>
           <div class="row">
             <div class="col-xs-6">
-              <div *ngFor="let column of studentColumns.slice(0, studentColumns.length/2 + 1)">
+              <div *ngFor="let column of studentColumns.slice(0, studentColumns.length/2)">
                 <input type="checkbox" class="option-input checkbox form-control"
                        [checked]="studentTableColumnsView[column]"
                        (change)="studentTableColumnsView[column] = !studentTableColumnsView[column]"
@@ -106,7 +89,7 @@
               </div>
             </div>
             <div class="col-xs-6" style="padding: 0;">
-              <div *ngFor="let column of studentColumns.slice(studentColumns.length/2 + 1, studentColumns.length)">
+              <div *ngFor="let column of studentColumns.slice(studentColumns.length/2, studentColumns.length)">
                 <input type="checkbox" class="option-input checkbox form-control"
                        [checked]="studentTableColumnsView[column]"
                        (change)="studentTableColumnsView[column] = !studentTableColumnsView[column]"
@@ -128,12 +111,35 @@
         </div>
         <div class="col-xs-4 export-option">
           <h4 style="text-align: center">Экспорт</h4>
-          <a href=""><label>Эксопртировать в .doc </label></a><br>
-          <a href=""><label>Эксопртировать в .xls </label></a>
+          <form ngNoForm action="http://sa.ru/api/export-doc/{{page}}/{{sortOption}}" target="_blank" method="POST">
+            <ng-container *ngFor="let dateKey of filterDateKeys;">
+              <input type="hidden" name="date[{{dateKey}}]" value="{{filter['date'][dateKey]}}">
+            </ng-container>
+            <ng-container *ngFor="let status of filter['status']; let i = index;">
+              <input type="hidden" name="status[{{i}}]" value="{{status}}">
+            </ng-container>
+            <ng-container *ngFor="let course of filter['course']; let i = index;">
+              <input type="hidden" name="course[{{i}}]" value="{{course}}">
+            </ng-container>
+            <input type="submit" value="Эксопртировать в .doc" class="btn btn-link">
+          </form>
+          <form ngNoForm action="http://sa.ru/api/export-xls/{{page}}/{{sortOption}}" target="_blank" method="POST">
+            <ng-container *ngFor="let dateKey of filterDateKeys;">
+              <input type="hidden" name="date[{{dateKey}}]" value="{{filter['date'][dateKey]}}">
+            </ng-container>
+            <ng-container *ngFor="let status of filter['status']; let i = index;">
+              <input type="hidden" name="status[{{i}}]" value="{{status}}">
+            </ng-container>
+            <ng-container *ngFor="let course of filter['course']; let i = index;">
+              <input type="hidden" name="course[{{i}}]" value="{{course}}">
+            </ng-container>
+            <input type="submit" value="Эксопртировать в .xls" class="btn btn-link">
+          </form>
         </div>
       </div>
       <div class="list">
-        <p-paginator rows="10" totalRecords="100" (onPageChange)="paginate($event)"></p-paginator>
+        <h3>Всего найдено: {{totalCountStudents}}</h3>
+        <p-paginator rows="100" totalRecords="{{totalCountStudents}}" (onPageChange)="paginate($event)"></p-paginator>
         <table border="1px">
           <tr>
             <ng-container *ngFor="let column of studentColumns">
